# anki-flashcards-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/anki_mcp/: __init__.py  server.py
