[project]
name = "anki-flashcards-mcp"
version = "0.1.0"
description = "MCP server for AnkiConnect integration - enables LLMs to read and write Anki flashcards"
authors = [{ name = "Duncan Grimes" }]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
anki-mcp = "anki_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_mcp"]
